# FVTT-CC-Generator

./: .gitignore  LICENSE  README.md  diagnose.sh  package-lock.json  package.json  release.sh  test-all.sh
agent/: .env.example  README.md  pyproject.toml
agent/src/fab_agent/: __init__.py  __main__.py  cli.py  config.py  handlers.py  llm.py  prompts.py  protocol.py  server.py  skills_loader.py  validators.py
agent/src/fab_agent/skills/campaign-codex-sheets/: SKILL.md
agent/src/fab_agent/skills/compendium-search-first/: SKILL.md
agent/src/fab_agent/skills/dnd5e-content-authoring/: SKILL.md
agent/src/fab_agent/skills/world-context-linking/: SKILL.md
agent/src/fab_agent/templates/dnd5e/: actor.json  item.json  journal-page.json
agent/tests/: __init__.py  _smoke_imports.py  test_validators.py
docs/: index.md
docs/wiki/: architecture.md  development.md  index.md  install.md  protocol.md  troubleshooting.md  usage.md
foundry-module/: module.json
foundry-module/lang/: en.json
foundry-module/scripts/: main.js
foundry-module/scripts/lib/: commit.js  constants.js  settings.js  world-context.js  ws-client.js
foundry-module/scripts/sheets/: designer.js
foundry-module/styles/: fab.css
foundry-module/templates/: designer.hbs
scripts/: validate-module-json.py
tests/: test_foundry_loader.mjs  test_js_syntax.py  test_manifest_loader_contract.py  test_module_manifest.py  test_ws_protocol.py
