[project]
name = "fab-agent"
version = "0.1.0"
description = "Local WebSocket agent that powers the FVTT-CC-Generator Foundry VTT v14 module. Streams AI-generated Campaign Codex sheets (location, npc, region, shop, group, quest) into a Foundry module preview/commit flow."
authors = [
  { name = "Hermes Agent" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["foundry", "vtt", "dnd5e", "campaign-codex", "websocket", "ai", "llm"]

# PEP 621 deps (also uv-compatible)
dependencies = [
  "websockets>=12.0",
  "litellm>=1.40.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.8",
]

[project.scripts]
fab-agent = "fab_agent.cli:main"

[project.urls]
"Homepage" = "https://github.com/nousresearch/fvtt-cc-generator"
"Bug Tracker" = "https://github.com/nousresearch/fvtt-cc-generator/issues"

# ----------------------------------------------------------------------
# uv / hatch build config
# ----------------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fab_agent"]

# ----------------------------------------------------------------------
# Pytest
# ----------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"

# ----------------------------------------------------------------------
# Ruff
# ----------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["E501"]

# ----------------------------------------------------------------------
# MyPy
# ----------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
